Pending changes in the mainline
===============================

* New configuration option "DownloadDicomDir" to download archives
  containing DICOMDIR instead of a human-readable hierarchy of folders
* If available, use ZIP streaming from Orthanc >= 1.9.4 to create archives


Version 2.0 (2021-05-27)
========================

* New tools for annotations: segment length, circle, angle and eraser
* Patient birth date is now displayed in the overlays
* New argument "token" to set HTTP header "Authorization: Bearer <token>"
  for each request to the DICOMweb server
* Fix issue #197 (Support for passing credentials with all HTTP requests)
* Emscripten version: 2.0.23


Version 1.0 (2020-12-02)
========================

* Initial release
* Emscripten version: 1.39.17-upstream