@@ -92,12 +92,19 @@
     "OrthancApiRoot" : "..",
 
     /**
-     * If this option is set to "true", the Stone Web viewer will
-     * create DICOMDIR media archives (as generated by the route
-     * "/studies/{id}/media" of Orthanc), instead of archives
+     * If option "DownloadDicomDir" is set to "true", the Stone Web
+     * viewer will create DICOMDIR media archives (as generated by the
+     * route "/studies/{id}/media" of Orthanc), instead of archives
      * containing a human-readable hierarchy of folders (as generated
      * by the route "/studies/{id}/archive").
      **/
-    "DownloadDicomDir" : false
+    "DownloadDicomDir" : false,
+
+    /**
+     * By setting option "InstitutionLogo" to an URL containing an
+     * image, this logo will be displayed at the bottom-left of the
+     * Stone Web viewer.
+     **/
+    "InstitutionLogo" : ""
   }
 }
