@@ -1,8 +1,10 @@
 Pending changes in the mainline
 ===============================
 
-* New configuration option "DownloadDicomDir" to download archives
-  containing DICOMDIR instead of a human-readable hierarchy of folders
+* New configuration options:
+  - "DownloadDicomDir" to download archives containing DICOMDIR instead of
+    a human-readable hierarchy of folders
+  - "InstitutionLogo" to display the logo of your institution in the viewer
 * If available, use ZIP streaming from Orthanc >= 1.9.4 to create archives
 
 
